HEX-1796: Add POJO scoring for DeepLearning. Not yet for auto-encoder and for Maxout.